# specula

./: .gitignore  CLAUDE.md  README.md  build_llama_cpp.ps1  current_status.md  download_models.ps1  new_spec_decode_example_to_research.md  npu_thoughts_previous_examples.md  pyproject.toml  qlcom_compile_status.md  status_x86.md  sweep_baseline.ps1  sweep_speculative.ps1
archive/: qlcom_compile_status.md  status_x86.md
daily_driver/: README.md  optimization.md  recipe.md
docs/: 2026-05-12_overnight_perf_sprint.md  2026-05-12_sweep_and_mtp_landscape.md  2026-05-13_overnight_perf_results.md  2026-05-13_qwen3_6_27b_mtp.md  SME_investigation.md  adreno_debugging.md  e2e_optimizations.md  long_context_scaling.md  npu_engine_prefill_sidequest.md  npu_engine_todos.md  npu_ort_qnn_version_match.md  npu_results.md  npu_scoping.md  one_pipeline_cloud_gpu.md  phase5_export_on_x86.md  phase5_lever_c_x86_ask.md  phase5_local_qairt_compile.md  phase5_local_qairt_compile_findings.md  phase5_step6_compile_retro.md  qai_hub_recipe.md  qualcomm_reproduction_4b.md  qwen2_5_7b_baseline_all_backends.md  qwen3_4b_baseline_all_backends.md  qwen3_4b_baseline_methods.md  qwen3_perf_levers_investigation.md  reference-projects.md  rent_cloud_compute.md  repo_hygiene.md  roadmap.md  w4a16_ablation.md  w4a16_investigation.md  w4a16_investigation_continued.md
docs/archive/: SME_investigation.md  adreno_debugging.md  adreno_opencl.md  exporting_on_arm.md  npu_scoping.md  phase5_lever_c_x86_ask.md  upstream_issue_body.md
docs/review/: phase5_local_qairt_compile_findings.md  phase5_step6_compile_retro.md  phase5_step6_export_report.md
end-to-end/: COLD_START.md  README.md  RESUME.md  SETUP_DEV_USER.md  WARM_START.md  compare_to_qualcomm.py  compile_split_bundle.py  eval_quality.py  quantize_to_npu.py
end-to-end/configs/: qnn_v75_config.json  qnn_v81_config.json  qnn_v81_inner.json
end-to-end/lib/: aimet.py  aimet_config_llama.json  bundle.py  cal.py  model_config.py  qairt.py  rope.py  split.py  stages.py
end-to-end/scripts_helper/: export_dynamo.py  optimum_export_4b.py
last_side_quest/: last_side_quests.md
last_side_quest/sq1_heterogeneous/: architecture.md  demo_path_a.py  demo_path_b.py  demo_path_c.py  demo_path_c_stateful.py  findings.md  probe_tokenizer_match.py  prompt_json.txt  prompt_prose.txt  prompt_python.txt
last_side_quest/sq2_aimet_local/: aimet_local_survey.md  encodings_sample.json  findings.md  probe_qwen3_0p6b_ptq.py
last_side_quest/sq3_small_moe/: findings.md  olmoe_adapters.py  (+4 more)
npu_engine/: __init__.py  bench_concurrency4_npu_ortqnn.py  bench_concurrency_sidecar.py  bench_qwen2_5_7b_ortqnn.py  bench_qwen3_4b_ortqnn.py  compare_local_vs_qualcomm_oracle.py  http_server.py  probe_qualcomm_qwen3_4b.py  qualcomm_qwen2_5_7b_oracle.py  qualcomm_qwen3_4b_oracle.py  sidecar.py  specula_qwen3_4b_oracle.py
prompts/: calibration_chat.jsonl  humaneval_subset.jsonl  structured_json.jsonl
results/: ai_hub_model_zoo_check.md  baseline-cpu-Qwen3-1.7B-Q8_0-20260420-104239.csv  baseline-cpu-Qwen3-8B-Q4_K_M-20260420-104425.csv  baseline-cpu-kleidiai-Qwen3-0.6B-Q8_0-20260420-111904.csv  baseline-cpu-kleidiai-Qwen3-8B-Q4_K_M-20260420-112007.csv  baseline-opencl-Qwen3-1.7B-Q8_0-20260420-104218.csv  bin_inspect.json  correctness_fp16_local_p0.stdout  correctness_w4a16_local_mse_p0.stdout  correctness_w4a16_local_p0.stdout  correctness_w4a16_local_pr_p0.stdout  correctness_w4a16_local_tfe_p0.stdout  correctness_w8a16_local_p0.stdout  correctness_w8a16_local_pr_p0.stdout  differential_w4a16_tfe_vs_fp16_p0.stdout  kleidiai-sme0.stdout  npu_env_snapshot.txt  phase5_step6_bool_region.json  phase5_step6_bool_region_dump.txt  phase5_step6_probe_patha.json  phase5_step6_probe_pathbmask.json  phase5_step6_probe_staged.json  preflight_w4a16_local_ort21_embed.stderr  preflight_w4a16_local_ort21_embed.stdout  preflight_w4a16_local_ort21_filemap2.stderr  preflight_w4a16_local_qairt242.stderr  preflight_w4a16_local_qairt242.stdout  preflight_w4a16_local_qairt242_v2.stdout  preflight_w4a16_local_qairt242_v3.stdout  qualcomm_qwen2_5_7b_oracle.md  qualcomm_qwen3_4b_oracle.md  qwen3_4b_genie_w4a16_probe.md  spec-npu-Qwen3-8B-Q4_K_M-vs-Qwen3-0.6B-pathb-async-pipelined-20260422-224213.csv  spec-npu-Qwen3-8B-Q4_K_M-vs-Qwen3-0.6B-pathbmask-20260421-180804.csv  spec-npu-Qwen3-8B-Q4_K_M-vs-Qwen3-0.6B-pathbmask-async-20260421-191334.csv  spec-npu-Qwen3-8B-Q4_K_M-vs-Qwen3-0.6B-pathbmask-async-pipelined-20260421-191947.csv  spec-npu-Qwen3-8B-Q4_K_M-vs-Qwen3-0.6B-pathbmask-async-pipelined-20260421-193926.csv  spec-npu-Qwen3-8B-Q4_K_M-vs-Qwen3-0.6B-pathbmask-async-pipelined-20260421-204228.csv  spec-npu-Qwen3-8B-Q4_K_M-vs-Qwen3-0.6B-pathbmask-async-pipelined-20260421-204759.csv  spec-opencl-Qwen3-8B-Q4_K_M-vs-Qwen3-0.6B-Q8_0-20260420-134935.csv  (+4 more)
scripts/: adreno_bench_matrix.ps1  ai_hub_quantize_4b_part.py  bench_concurrency4_all_backends.py  bench_concurrency4_gpu_knobs.py  bench_concurrency4_gpu_knobs_bat.py  bench_concurrency4_npu_ortqnn.py  bench_daily_driver.py  bench_daily_driver_longctx.py  bench_daily_driver_phase10_delta_prefill.py  bench_daily_driver_phase4_kv_fa.py  bench_daily_driver_phase5_threads.py  bench_daily_driver_phase6_memflags.py  bench_daily_driver_phase8_gpu_longctx.py  bench_daily_driver_phase9_lookup.py  bench_daily_driver_phase9b_lookup_tight.py  bench_daily_driver_phase9c_lookup_d32k.py  bench_mtp_server_sweep.ps1  bench_qwen2_5_7b_all_backends.py  bench_qwen3_4b_all_backends.py  bench_qwen3_4b_gpu_knobs_bat.py  bench_qwen3_4b_ortqnn.py  bench_qwen3_6_27b_2026-05-13.ps1  bench_qwen3_6_27b_mtp_2026-05-13.ps1  build_llama_cpp.ps1  build_part2_residual_overrides.py  build_part4_lmhead_w8_override.py  build_specula_4b_wrappers.py  build_uint8_kv_overrides.py  capture_calibration_qwen3_4b.py  capture_calibration_qwen3_4b_split.py  capture_calibration_samples.py  check_daily_driver_status.ps1  compare_local_vs_qualcomm_oracle.py  compile_4b_bundle_ctx_bin_gen.py  compile_qwen3_ai_hub.py  download_models.ps1  download_qwen3_onnx.py  export_qwen3_qnn.py  freeze_onnx_dims.py  gen_pp512_prompt.py  (+53 more)
(+181 files in other folders)
